[tool.poetry]
name = "layered-config"
version = "2.0.2"
description = "A tool for managing layered config files!"
authors = ["Doug Philips <dgou@mac.com>"]
license = "MIT"
homepage = "https://github.com/jolly-good-toolbelt/layered-config"
repository = "https://github.com/jolly-good-toolbelt/layered-config"
documentation = "https://jolly-good-toolbelt.github.io/layered-config/"
keywords = ["layers", "config", "configparser", "ini", "dict"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    ]

[tool.poetry.dependencies]
python = "^3.6"
munch = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pre-commit = "^1.17"
sphinx = "^2.1"
sphinx-rtd-theme = "^0.4.3"
tomlkit = "^0.5.3"
ghp-import = "^0.5.5"

[tool.poetry.extras]
munch = ["munch"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
