[tool.poetry]
name = "layered-config"
version = "2.0.3"
description = "A tool for managing layered config files!"
authors = ["Doug Philips <dgou@mac.com>"]
license = "MIT"
homepage = "https://github.com/jolly-good-toolbelt/layered-config"
repository = "https://github.com/jolly-good-toolbelt/layered-config"
documentation = "https://jolly-good-toolbelt.github.io/layered-config/"
keywords = ["layers", "config", "configparser", "ini", "dict"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    ]

[tool.poetry.dependencies]
python = "^3.6"
munch = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
jgt_tools = {version = "^0.4.0", extras = ["env_setup"]}

[tool.poetry.extras]
munch = ["munch"]

[tool.jgt_tools]
env_setup_commands = [
    "poetry run pip install --upgrade pip<19",
    "poetry install -E munch",
    "poetry run pre-commit install"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
